# rust-web-server

./: Cargo.toml  LICENSE  README.md  docker-compose.yml
migrations/: 20230513165959_create_todo_table.down.sql  20230513165959_create_todo_table.up.sql  20230520232658_create_user_table.down.sql  20230520232658_create_user_table.up.sql
src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs
src/adapters/api/: error.rs  mod.rs  routes_hello.rs  routes_todo.rs  routes_user.rs
src/domain/entities/: todo.rs  user.rs
src/domain/repositories/: error.rs  mod.rs  todo_repository.rs  user_repository.rs
src/domain/services/: error.rs  mod.rs  todo_service.rs  user_service.rs
src/infrastructure/: mod.rs
src/infrastructure/repositories/: todo_repository.rs  user_repository.rs
src/services/: mod.rs  todo_service.rs  user_service.rs
