[package]
name = "rust-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["json", "postgres", "runtime-tokio-rustls", "uuid", "time", "migrate"] }
tokio = { version = "1.28", features = ["full"] }
tower-cookies = "0.9"
tower-http = { version = "0.4", features = ["cors", "auth"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.3", features = ["v4"] }
